<resources>
    <string name="app_name">CS3270A7 Anthony Bahl</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_course">New Course</string>
    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="course_code">Course Code</string>
    <string name="start_at">Start At</string>
    <string name="end_at">End At</string>
    <string name="save">Save</string>
</resources>